[gd_scene load_steps=16 format=2]

[ext_resource path="res://galgame/assets/art/background/朝武_リビングA.png" type="Texture" id=1]
[ext_resource path="res://galgame/assets/art/character/茉子/微笑.png" type="Texture" id=2]
[ext_resource path="res://galgame/assets/art/character/茉子/微笑1.png" type="Texture" id=3]
[ext_resource path="res://galgame/assets/art/ui/sqscrmask.png" type="Texture" id=4]
[ext_resource path="res://galgame/assets/art/character/茉子/满足.png" type="Texture" id=5]
[ext_resource path="res://galgame/scenes/main.gd" type="Script" id=6]
[ext_resource path="res://galgame/assets/art/ui/touchicon_option.png" type="Texture" id=7]
[ext_resource path="res://galgame/assets/font/造字工房悦圆.otf" type="DynamicFontData" id=8]
[ext_resource path="res://galgame/assets/art/ui/touchicon_auto.png" type="Texture" id=9]
[ext_resource path="res://galgame/assets/art/ui/touchicon_load.png" type="Texture" id=10]
[ext_resource path="res://galgame/assets/art/ui/touchicon_save.png" type="Texture" id=11]
[ext_resource path="res://galgame/assets/art/ui/touchicon_log.png" type="Texture" id=12]
[ext_resource path="res://galgame/scenes/ui/system_panel.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
theme = SubResource( 2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -47.0
margin_top = -26.0
margin_right = 47.0
margin_bottom = 27.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="left" type="TextureRect" parent="character"]
visible = false
anchor_top = 0.167
anchor_bottom = 0.167
margin_left = 164.0
margin_top = -0.360016
margin_right = 653.0
margin_bottom = 1669.64
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="TextureRect" parent="character"]
visible = false
anchor_left = 0.373
anchor_top = 0.167
anchor_right = 0.627
anchor_bottom = 0.167
margin_left = -0.660034
margin_top = 0.0879517
margin_right = 0.659912
margin_bottom = 1670.09
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="right" type="TextureRect" parent="character"]
visible = false
anchor_left = 1.0
anchor_top = 0.167
anchor_right = 1.0
anchor_bottom = 0.167
margin_left = -670.0
margin_top = 0.0879517
margin_right = -181.0
margin_bottom = 1670.09
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog_bg" type="TextureButton" parent="dialog"]
modulate = Color( 1, 1, 1, 0.423529 )
light_mask = 0
anchor_top = 0.636
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.119934
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speaker_label" type="Label" parent="dialog"]
anchor_left = 0.042
anchor_top = 0.731
anchor_right = 0.042
anchor_bottom = 0.731
margin_left = -36.69
margin_top = -67.48
margin_right = 198.31
margin_bottom = -18.48
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog_label" type="Label" parent="dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 81.0
margin_top = 789.0
margin_right = -139.0
margin_bottom = -78.0
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="dialog/dialog_label"]

[node name="option_list" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -610.0
margin_top = -359.552
margin_right = 611.0
margin_bottom = 135.448
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="touch_icon" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -575.009
margin_top = -100.0
margin_right = -59.0088
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="log" type="TextureButton" parent="touch_icon"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 12 )
expand = true

[node name="save" type="TextureButton" parent="touch_icon"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 11 )
expand = true

[node name="load" type="TextureButton" parent="touch_icon"]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 10 )
expand = true

[node name="auto" type="TextureButton" parent="touch_icon"]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 9 )
expand = true

[node name="system" type="TextureButton" parent="touch_icon"]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 7 )
expand = true

[node name="system_panel" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="pressed" from="dialog/dialog_bg" to="." method="_on_dialog_bg_pressed"]
[connection signal="pressed" from="touch_icon/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="touch_icon/system" to="." method="_on_system_pressed"]
